added brief bio and photos

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <div class="section-title">INTRO</div>
-                        <h2>We Offer Some Of The Best Business Growth Services In Town</h2>
+                        <h2>A long time IT Professional looking to start a new chapter by becoming a developer. It hasn't happened over night. It's happening right now, I finished a six month course course with UC Berkeley Extensions to hone in on new skills for my next role. While also creating apps like Mugif.</h2>
                         <p>Justin is an aspiring web devloper, looking to change careers in 2020. Currently living in Oakland, Justin has been in the IT Support field for nearly 10 years.</p>
                         <p class="testimonial-text">"Our mission here at Aira is to get you through those tough moments relying on our team's expertise in starting and growing companies."</p>
                         <div class="testimonial-author">Louise Donovan - CEO</div>
@@ -146,7 +146,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/intro-office.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/justin-c.jpg" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
